# itmo-ai-timetable-ics

./: .env.example  .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: pre-commit.yml  run-test.yaml  typecheck.yaml
courses_processor/: README.md  compare_course_list.py  compare_courses.py  total_courses.json
src/: logger.py  main.py  timetable_file.py  transform_ics.py
src/itmo_ai_timetable/: __init__.py  bot.py  cleaner.py  cli.py  gcal.py  logger.py  repository.py  schedule_parser.py  schemes.py  selection_parser.py  settings.py  timetable_file.py  transform_ics.py
src/itmo_ai_timetable/db/: base.py  session_manager.py
src/itmo_ai_timetable/db/migrations/: env.py
src/itmo_ai_timetable/db/migrations/versions/: 2024-08-25_83bf6072b0b1_init.py  2024-08-30_52ed67cddbc8_init.py  2024-08-31_c025cf043a37_add_tz.py  2024-08-31_c9bcd9f756e9_add_gcal_event_id.py  2024-08-31_d049d1e83016_init.py  2024-08-31_e8c0bfa43dc2_add_class_type.py  2024-09-07_e68d1c12a16b_add_courses.py  2024-09-07_fadd8f8b5828_add_current_study_course.py  2024-09-08_c35b1b08a8b9_remove_id_from_user_course.py
src/itmo_ai_timetable/repositories/: calendar.py  course_info.py  db.py
src/itmo_ai_timetable_ics/: main.py  schemes.py  timetable_file.py  transform_ics.py
tests/: conftest.py  test_migrations.py  test_repository.py  test_table_parser.py  utils.py
