[project]
name = "itmo-ai-timetable-ics"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Roman Solomatin", email = "36135455+Samoed@users.noreply.github.com"},
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "ics>=0.7.2",
    "pytz>=2024.1",
    "openpyxl>=3.1.5",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.4.0",
]
scripts = { cli="src.itmo_ai_timetable_ics.cli:main" }


[tool.pdm.dev-dependencies]
lint = [
    "ruff>=0.6.2",
    "pre-commit>=3.8.0",
]
typing = [
    "mypy>=1.11.1",
    "types-openpyxl>=3.1.5.20240822",
    "types-pytz>=2024.1.0.20240417",
    "types-python-dateutil>=2.9.0.20240821",
]
test = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
]

[tool.pdm.scripts]
lint = {cmd = [
    "pre-commit", "run", "--all-files",
]}

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra" # --cov src/itmo_ai_timetable_ics
testpaths = [
    "tests",
]
log_format = "%(asctime)s %(levelname)s %(message)s"
log_level = "INFO"
pythonpath = "itmo_ai_timetable_ics"

[tool.ruff]
fix = true
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select= [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # ruff
    "N",   # flake8-naming
#    "ANN", # flake8-annotations
    "S",   # flake8-bandit
    "BLE", # flake8-blind-except
    "A",   # flake8-builtins
#    "COM", # flake8-trailing-comma
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
#    "EM",  # flake8-errmsg
    "ISC", # flake8-implicit-str-concat
    "LOG", # flake8-logging
#    "G",   # flake8-logging-format
    "PIE", # flake8-pie
    "INP", # flake8-no-pep420
    "T20", # flake8-print
    "PT",  # flake8-pytest-style
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "PL",  # pylint
    "NPY", # NumPy-specific rules
#    "FAST", # fastapi
#    "TCH", # flake8-type-checking
#    "TID", # flake8-tidy-imports
#    "D",   # pydocstyle
]
ignore = [
    "RUF001",
    "ISC001",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F405", "F403", "D"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_redundant_casts = true
mypy_path = "src/"
plugins = [
    "pydantic.mypy",
]
