[project]
name = "itmo-ai-timetable"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Roman Solomatin", email = "36135455+Samoed@users.noreply.github.com"},
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "ics>=0.7.2",
    "pytz>=2024.1",
    "openpyxl>=3.1.5",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.4.0",
    "gcsa>=2.3.0",
    "sqlalchemy>=2.0.32",
    "alembic>=1.13.2",
    "asyncpg>=0.29.0",
]
scripts = { cli="src.itmo_ai_timetable.cli:main" }


[tool.pdm.dev-dependencies]
lint = [
    "ruff>=0.6.2",
    "pre-commit>=3.8.0",
]
typing = [
    "mypy>=1.11.1",
    "types-openpyxl>=3.1.5.20240822",
    "types-pytz>=2024.1.0.20240417",
    "types-python-dateutil>=2.9.0.20240821",
    "sqlalchemy[mypy]>=2.0.32",
]
test = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
]

[tool.pdm.scripts]
lint_local.composite = [
    "ruff format",
    "ruff check",
    "mypy src",
]
lint = {cmd = [
    "pre-commit", "run", "--all-files",
]}
test = { cmd = [
    "pytest", "--cov=src", "tests"
]}
test_html = { cmd = [
    "pytest", "--cov=src", "--cov-report=html", "tests"
]}


[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra" # --cov breaks pycharm test debugger
testpaths = [
    "tests",
]
log_format = "%(asctime)s %(levelname)s %(message)s"
log_level = "INFO"
pythonpath = "itmo_ai_timetable"

[tool.coverage.run]
branch = true
omit = [
    "__init__.py",
]

[tool.coverage.paths]
source = [
    "src/",
]

[tool.coverage.report]
skip_empty = true

[tool.ruff]
fix = true
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select= [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "RUF",  # ruff
    "N",    # flake8-naming
    "S",    # flake8-bandit
    "BLE",  # flake8-blind-except
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "ISC",  # flake8-implicit-str-concat
    "LOG",  # flake8-logging
    "PIE",  # flake8-pie
    "INP",  # flake8-no-pep420
    "T20",  # flake8-print
    "PT",   # flake8-pytest-style
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "PL",   # pylint
    "NPY",  # NumPy-specific rules
    "TCH",  # flake8-type-checking
    "TID",  # flake8-tidy-imports
#    "FAST", # fastapi
#    "D",    # pydocstyle
#    "G",    # flake8-logging-format
#    "EM",   # flake8-errmsg
]
ignore = [
    "RUF001",
    "ISC001",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F405", "F403", "D"]
"tests/*.py" = ["S", "PLR2004"]
"src/itmo_ai_timetable/db/migrations/versions/*.py" = ["N999"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_redundant_casts = true
mypy_path = "src/"
plugins = [
    "pydantic.mypy",
    "sqlalchemy.ext.mypy.plugin",
]
exclude = [
    "tests",
]
